--- a/map1.html
+++ b/map1.html
@@ -3,60 +3,117 @@
 <head>
   <title>Carte interactive codes postaux France</title>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Feuille de style Leaflet -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+  <!-- Librairie SheetJS pour lire Excel -->
+  <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
   <style>
-    #map { height: 90vh; width: 100%; }
+    body { margin:0; padding:0; }
+    #map { height: 90vh; width: 100vw; }
+    #controls {
+      padding:10px; background:#fff; position: fixed; top:8px; left:8px; z-index: 1000;
+      border-radius: 6px; box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+    }
   </style>
 </head>
 <body>
+  <!-- Barre de contrôle -->
+  <div id="controls">
+    <input type="file" id="uploadExcel" accept=".xlsx" />
+    <button id="convertBtn">Conversion JSON et Affichage</button>
+  </div>
+  <!-- Carte -->
   <div id="map"></div>
-  
-  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+
   <script>
-    // Initialiser la carte centrée sur la France
     var map = L.map('map').setView([46.6, 2.4], 6);
 
-    // Ajouter la couche OpenStreetMap
+    // Fond cartographique OpenStreetMap
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
       maxZoom: 18,
       attribution: '© OpenStreetMap contributors'
     }).addTo(map);
 
-    // Fonction pour définir la couleur selon nbNumeros
-    function getColor(nb) {
-      return nb > 20000 ? '#800026' :
-             nb > 10000 ? '#BD0026' :
-             nb > 5000  ? '#E31A1C' :
-             nb > 1000  ? '#FC4E2A' :
-             nb > 500   ? '#FD8D3C' :
-                          '#FEB24C';
+    // Dictionnaire des propriétés Excel à appliquer
+    let extraProperties = {};
+
+    // Fonction pour afficher la couche GeoJSON avec les propriétés dynamiques
+    function updateMapWithExtraProperties() {
+      fetch('contours-codes-postaux.geojson')
+        .then(res => {
+          if (!res.ok) throw new Error("Le fichier GeoJSON n'a pas été chargé correctement.");
+          return res.json();
+        })
+        .then(data => {
+          // Supprimer ancienne couche si présente
+          if (window.geoLayer) map.removeLayer(window.geoLayer);
+
+          window.geoLayer = L.geoJSON(data, {
+            style: function(feature) {
+              let cp = feature.properties.code_postal || feature.properties.codePostal || feature.properties.code || "";
+              let extras = extraProperties[cp] || {};
+
+              return {
+                fillColor: extras["Fond_couleur"] || "#FFFF00",
+                color: extras["Ligne_couleur"] || "#000000",
+                weight: 2,
+                opacity: 1,
+                fillOpacity: 0.7
+              };
+            },
+            onEachFeature: function(feature, layer) {
+              let cp = feature.properties.code_postal || feature.properties.codePostal || feature.properties.code || "";
+              let extras = extraProperties[cp] || {};
+              let tooltipText =
+                (extras["Texte1"] ? extras["Texte1"] : "") +
+                (extras["Texte2"] ? "<br>" + extras["Texte2"] : "");
+              layer.bindTooltip(tooltipText || ("Code Postal : " + cp));
+              if (extras["Clic URL"] && extras["Clic URL"].trim().length > 0) {
+                layer.on("click", function() {
+                  window.open(extras["Clic URL"], '_blank');
+                });
+                layer.setStyle({ cursor: "pointer" });
+              }
+            }
+          }).addTo(map);
+
+          map.fitBounds(window.geoLayer.getBounds()); // centrage auto sur les polygones
+        })
+        .catch(err => {
+          alert(err.message);
+          console.error(err);
+        });
     }
 
-    // Fonction de style pour chaque polygone
-    function style(feature) {
-      return {
-        fillColor: getColor(feature.properties.nbNumeros),
-        weight: 1,
-        opacity: 1,
-        color: '#000000',
-        fillOpacity: 0.7
+    // Evénement sur le bouton : conversion Excel > JSON et affichage
+    document.getElementById('convertBtn').onclick = function() {
+      let fileInput = document.getElementById('uploadExcel');
+      let file = fileInput.files[0];
+      if (!file) {
+        alert("Sélectionnez un fichier Excel (.xlsx) à convertir avant de cliquer.");
+        return;
+      }
+      var reader = new FileReader();
+      reader.onload = function(e) {
+        var data = new Uint8Array(e.target.result);
+        var workbook = XLSX.read(data, {type: 'array'});
+        var firstSheetName = workbook.SheetNames[0];
+        var sheet = workbook.Sheets[firstSheetName];
+        var jsonData = XLSX.utils.sheet_to_json(sheet);
+        // Remplir extraProperties
+        extraProperties = {};
+        jsonData.forEach(function(item) {
+          let cp = (item["Code Postal"]||"").toString();
+          if (cp.length > 0) extraProperties[cp] = item;
+        });
+        updateMapWithExtraProperties();
+        alert("Conversion et affichage réalisés !");
       };
-    }
+      reader.readAsArrayBuffer(file);
+    };
 
-    // Charger le GeoJSON
-    fetch('contours-codes-postaux.geojson')
-      .then(res => res.json())
-      .then(data => {
-        L.geoJSON(data, {
-          style: style,
-          onEachFeature: function(feature, layer) {
-            let cp = feature.properties.codePostal || "Inconnu";
-            let nb = feature.properties.nbNumeros || "N/A";
-            layer.bindTooltip(`Code Postal: ${cp}<br>Nb Numéros: ${nb}`);
-          }
-        }).addTo(map);
-      })
-      .catch(err => console.error('Impossible de charger le GeoJSON:', err));
   </script>
 </body>
 </html>
