--- a/map1.html
+++ b/map1.html
@@ -4,61 +4,95 @@
   <title>Carte interactive codes postaux France</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Feuille de style Leaflet -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-  <!-- Librairie SheetJS pour lire Excel -->
   <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
   <style>
-    body { margin:0; padding:0; display: flex; height: 100vh; overflow: hidden; }
-    #sidebar {
+    body { margin:0; padding:0; display: flex; height: 100vh; overflow: hidden; font-family: Arial, sans-serif; }
+    #sidebar-left, #sidebar-right {
       width: 250px;
       background: #f7f7f7;
       overflow-y: auto;
       padding: 10px;
       box-shadow: 2px 0 5px rgba(0,0,0,0.1);
-      font-family: Arial, sans-serif;
       font-size: 14px;
     }
-    #sidebar h2 {
-      margin-top: 0;
-      font-size: 18px;
-      margin-bottom: 10px;
+    #sidebar-left {
+      border-right: 1px solid #ccc;
     }
-    #sidebar label {
-      display: block;
-      margin-bottom: 6px;
-      cursor: pointer;
+    #sidebar-right {
+      border-left: 1px solid #ccc;
     }
     #map {
       flex-grow: 1;
       height: 100vh;
     }
-    #controls {
-      padding:10px;
-      background:#fff;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-      border-bottom: 1px solid #ddd;
-      margin-bottom: 10px;
+    h2 {
+      margin-top: 0; font-size: 18px; margin-bottom: 10px; border-bottom: 1px solid #ccc; padding-bottom: 4px;
     }
-    /* Style tooltip personnalisée */
+    label {
+      display: block;
+      margin-bottom: 6px;
+      cursor: pointer;
+      user-select: none;
+    }
+    #controls {
+      padding:10px; background:#fff; position: sticky; top: 0; z-index: 1000; border-bottom: 1px solid #ddd; margin-bottom: 10px;
+    }
     .custom-tooltip {
       font-weight: bold;
+    }
+    .selectall-label {
+      font-weight: bold;
+      margin-top: 6px;
+      border-bottom: 1px solid #ddd;
+      padding-bottom: 2px;
+      cursor: pointer;
+      user-select: none;
     }
   </style>
 </head>
 <body>
-  <div id="sidebar">
+  <div id="sidebar-left">
     <div id="controls">
       <input type="file" id="uploadExcel" accept=".xlsx" />
       <button id="convertBtn">Conversion JSON et Affichage</button>
     </div>
-    <h2>Filtres Agence</h2>
-    <div id="agenceList">Veuillez charger un fichier Excel.</div>
+
+    <h2>Filtres Gauche</h2>
+
+    <div id="filter-agence">
+      <label class="selectall-label"><input type="checkbox" id="agence-select-all" checked> Tout Agences</label>
+      <div id="agenceList">Veuillez charger un fichier Excel.</div>
+    </div>
+
+    <div id="filter-region">
+      <label class="selectall-label"><input type="checkbox" id="region-select-all" checked> Tout Régions</label>
+      <div id="regionList"></div>
+    </div>
+
+    <div id="filter-antenne">
+      <label class="selectall-label"><input type="checkbox" id="antenne-select-all" checked> Tout Antennes</label>
+      <div id="antenneList"></div>
+    </div>
   </div>
+
   <div id="map"></div>
+
+  <div id="sidebar-right">
+    <h2>Filtres Droite</h2>
+
+    <div id="filter-departement">
+      <label class="selectall-label"><input type="checkbox" id="departement-select-all" checked> Tout Départements</label>
+      <div id="departementList"></div>
+    </div>
+
+    <div id="filter-texte2">
+      <label class="selectall-label"><input type="checkbox" id="texte2-select-all" checked> Tout Texte2</label>
+      <div id="texte2List"></div>
+    </div>
+  </div>
+
   <script>
     var map = L.map('map', { minZoom: 6 }).setView([46.6, 2.4], 6);
 
@@ -68,10 +102,27 @@
     }).addTo(map);
 
     let extraProperties = {};
-    let agenceMap = new Map(); // Map des agences -> Set des codes postaux
-    let agenceChecked = new Map(); // Etat des cases cochées
     let geoLayer;
 
+    // Structures pour stocker valeurs uniques par filtre
+    let distinctValues = {
+      agence: new Map(),
+      region: new Map(),
+      antenne: new Map(),
+      departement: new Map(),
+      texte2: new Map()
+    };
+
+    // Etat des filtres cochés
+    let filterState = {
+      agence: new Map(),
+      region: new Map(),
+      antenne: new Map(),
+      departement: new Map(),
+      texte2: new Map()
+    };
+
+    // Fonction utilitaire tolérante pour récupérer valeur d'objet via clé insensible à casse et espaces
     function getKeyIgnoreCase(obj, key) {
       key = key.toLowerCase().replace(/\s+/g, '');
       for (const k in obj) {
@@ -80,54 +131,134 @@
       return null;
     }
 
-    // Met à jour la liste des agences dans la sidebar avec cases à cocher
-    function buildAgenceList() {
-      const container = document.getElementById('agenceList');
+    // Crée les listes de cases à cocher d'un filtre dans un container
+    function buildFilterList(filterName, containerId) {
+      const container = document.getElementById(containerId);
       container.innerHTML = '';
-
-      agenceMap.forEach((cpSet, agence) => {
-        // Crée une checkbox par agence, cochée par défaut
+      const mapVals = distinctValues[filterName];
+      mapVals.forEach((cpSet, val) => {
         const label = document.createElement('label');
         label.title = `${cpSet.size} codes postaux`;
 
         const checkbox = document.createElement('input');
         checkbox.type = 'checkbox';
         checkbox.checked = true;
-        agenceChecked.set(agence, true);
+        filterState[filterName].set(val, true);
 
         checkbox.addEventListener('change', () => {
-          agenceChecked.set(agence, checkbox.checked);
+          filterState[filterName].set(val, checkbox.checked);
           filterGeoLayer();
+          updateSelectAllCheckbox(filterName);
         });
 
         label.appendChild(checkbox);
-        label.appendChild(document.createTextNode(' ' + agence));
+        label.appendChild(document.createTextNode(' ' + val));
         container.appendChild(label);
       });
-
-      if (agenceMap.size === 0) {
-        container.textContent = "Aucune agence trouvée dans le fichier.";
-      }
     }
 
-    // Appliquer filtrage sur la couche GeoJSON en fonction des agences cochées
+    // Met à jour le checkbox "Tout" en fonction de l’état des cases
+    function updateSelectAllCheckbox(filterName) {
+      const selectAllCheckbox = document.getElementById(filterName + '-select-all');
+      const values = Array.from(filterState[filterName].values());
+      selectAllCheckbox.checked = values.every(v => v === true);
+      selectAllCheckbox.indeterminate = values.some(v => v === true) && !selectAllCheckbox.checked;
+    }
+
+    // Gestion du clique sur "Tout cocher/décocher"
+    function setupSelectAllListener(filterName) {
+      const selectAllCheckbox = document.getElementById(filterName + '-select-all');
+      selectAllCheckbox.addEventListener('change', () => {
+        const checked = selectAllCheckbox.checked;
+        filterState[filterName].forEach((_, key) => filterState[filterName].set(key, checked));
+
+        const container = document.getElementById(filterName + 'List');
+        Array.from(container.querySelectorAll('input[type="checkbox"]')).forEach(cb => {
+          cb.checked = checked;
+        });
+
+        filterGeoLayer();
+      });
+    }
+
+    // Fonction qui filtre les polygones selon tous les filtres : intersection des critères cochés
     function filterGeoLayer() {
       if (!geoLayer) return;
       geoLayer.eachLayer(layer => {
         let cp = layer.feature.properties.code_postal || layer.feature.properties.codePostal || layer.feature.properties.code || "";
-        // Trouver agence du code postal
-        let agence = null;
-        for (let [ag, cpSet] of agenceMap) {
-          if (cpSet.has(cp)) {
-            agence = ag;
-            break;
-          }
-        }
-        if (agence && agenceChecked.get(agence)) {
+
+        let extras = extraProperties[cp] || {};
+
+        // Récupérer les valeurs pour chaque filtre
+        let valAgence = getKeyIgnoreCase(extras, "Agence") || "";
+        let valRegion = getKeyIgnoreCase(extras, "région") || "";
+        let valAntenne = getKeyIgnoreCase(extras, "Antenne") || "";
+        let valDepartement = getKeyIgnoreCase(extras, "Departement") || "";
+        let valTexte2 = getKeyIgnoreCase(extras, "Texte2") || "";
+
+        // Décider affichage: true si toutes les catégories cochées sont vraies
+        let show = true;
+
+        show = show && filterState.agence.get(valAgence) !== false;
+        show = show && filterState.region.get(valRegion) !== false;
+        show = show && filterState.antenne.get(valAntenne) !== false;
+        show = show && filterState.departement.get(valDepartement) !== false;
+        show = show && filterState.texte2.get(valTexte2) !== false;
+
+        if (show) {
           layer.addTo(map);
         } else {
           map.removeLayer(layer);
         }
+      });
+    }
+
+    // Met à jour les filtres distincts à partir des données Excel chargées
+    function updateDistinctValues(jsonData) {
+      // Réinitialiser
+      for (const key in distinctValues) {
+        distinctValues[key].clear();
+        filterState[key].clear();
+      }
+
+      jsonData.forEach(item => {
+        const cp = (item["Code Postal"] || "").toString();
+        if (!cp) return;
+
+        const ag = getKeyIgnoreCase(item, "Agence") || "";
+        const re = getKeyIgnoreCase(item, "région") || "";
+        const an = getKeyIgnoreCase(item, "Antenne") || "";
+        const dep = getKeyIgnoreCase(item, "Departement") || "";
+        const tx2 = getKeyIgnoreCase(item, "Texte2") || "";
+
+        if (!distinctValues.agence.has(ag)) distinctValues.agence.set(ag, new Set());
+        distinctValues.agence.get(ag).add(cp);
+
+        if (!distinctValues.region.has(re)) distinctValues.region.set(re, new Set());
+        distinctValues.region.get(re).add(cp);
+
+        if (!distinctValues.antenne.has(an)) distinctValues.antenne.set(an, new Set());
+        distinctValues.antenne.get(an).add(cp);
+
+        if (!distinctValues.departement.has(dep)) distinctValues.departement.set(dep, new Set());
+        distinctValues.departement.get(dep).add(cp);
+
+        if (!distinctValues.texte2.has(tx2)) distinctValues.texte2.set(tx2, new Set());
+        distinctValues.texte2.get(tx2).add(cp);
+      });
+    }
+
+    // Construction des listes de filtres et configuration des "Tout"
+    function buildFilterLists() {
+      buildFilterList('agence', 'agenceList');
+      buildFilterList('region', 'regionList');
+      buildFilterList('antenne', 'antenneList');
+      buildFilterList('departement', 'departementList');
+      buildFilterList('texte2', 'texte2List');
+
+      ['agence', 'region', 'antenne', 'departement', 'texte2'].forEach(filt => {
+        updateSelectAllCheckbox(filt);
+        setupSelectAllListener(filt);
       });
     }
 
@@ -181,7 +312,7 @@
           }).addTo(map);
 
           map.fitBounds(geoLayer.getBounds());
-          filterGeoLayer(); // appliquer filtre dès le chargement
+          filterGeoLayer();
         })
         .catch(err => {
           alert(err.message);
@@ -205,22 +336,16 @@
         var jsonData = XLSX.utils.sheet_to_json(sheet);
 
         extraProperties = {};
-        agenceMap.clear();
+
+        // Récupérer les propriétés et créer les sets de codes postaux par filtre
+        updateDistinctValues(jsonData);
 
         jsonData.forEach(function(item) {
-          // Propriétés pour la carte
           let cp = (item["Code Postal"] || "").toString();
           if (cp.length > 0) extraProperties[cp] = item;
-
-          // Récupération agences et associer codes postaux
-          let agenceName = item["Agence"] || "Sans agence";
-          if (!agenceMap.has(agenceName)) {
-            agenceMap.set(agenceName, new Set());
-          }
-          agenceMap.get(agenceName).add(cp);
         });
 
-        buildAgenceList();
+        buildFilterLists();
         updateMapWithExtraProperties();
         alert("Conversion et affichage réalisés !");
       };
