--- a/map1.html
+++ b/map1.html
@@ -8,45 +8,44 @@
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
   <style>
-    body { margin:0; padding:0; display: flex; height: 100vh; overflow: hidden; font-family: Arial, sans-serif; }
+    html, body {
+      margin:0; padding:0; height: 100%;
+      font-family: Arial, sans-serif;
+      overflow: hidden;
+    }
+    body {
+      display: flex;
+      height: 100vh;
+      user-select: none; /* désactive la sélection générale */
+    }
     #sidebar-left, #sidebar-right {
-      width: 250px;
       background: #f7f7f7;
       overflow-y: auto;
       padding: 10px;
       box-shadow: 2px 0 5px rgba(0,0,0,0.1);
       font-size: 14px;
-      transition: max-height 0.3s ease;
+      min-width: 180px;
+      max-width: 400px;
+      resize: horizontal;
+      overflow: auto;
     }
     #sidebar-left {
       border-right: 1px solid #ccc;
-      position: relative;
+      width: 250px;
     }
     #sidebar-right {
       border-left: 1px solid #ccc;
-      position: relative;
+      width: 250px;
     }
     #map {
       flex-grow: 1;
       height: 100vh;
     }
-    h2 {
-      margin-top: 0; 
-      font-size: 18px; 
-      margin-bottom: 10px; 
-      border-bottom: 1px solid #ccc; 
-      padding-bottom: 4px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      user-select: none;
-      cursor: default;
-    }
     label {
       display: block;
       margin-bottom: 6px;
       cursor: pointer;
-      user-select: none;
+      user-select: text;
     }
     #controls {
       padding:10px; 
@@ -56,6 +55,7 @@
       z-index: 1000; 
       border-bottom: 1px solid #ddd; 
       margin-bottom: 10px;
+      user-select: none;
     }
     .custom-tooltip {
       font-weight: bold;
@@ -79,7 +79,6 @@
       user-select: none;
       margin-left: 4px;
     }
-    /* Positionnement boutons toggle */
     #toggleLeftBtn, #toggleRightBtn {
       position: fixed;
       top: 10px;
@@ -103,7 +102,6 @@
   </style>
 </head>
 <body>
-
   <button id="toggleLeftBtn" title="Afficher/Masquer Réseau">Réseau</button>
   <button id="toggleRightBtn" title="Afficher/Masquer Département">Département</button>
 
@@ -112,15 +110,6 @@
       <input type="file" id="uploadExcel" accept=".xlsx" />
       <button id="convertBtn">Conversion JSON et Affichage</button>
     </div>
-
-    <h2>
-      Filtres Gauche
-      <span>
-        <button class="toggle-btn" data-target="agenceList">Agence</button>
-        <button class="toggle-btn" data-target="regionList">Région</button>
-        <button class="toggle-btn" data-target="antenneList">Antenne</button>
-      </span>
-    </h2>
 
     <div id="filter-agence">
       <label class="selectall-label"><input type="checkbox" id="agence-select-all" checked> Tout Agences</label>
@@ -141,14 +130,6 @@
   <div id="map"></div>
 
   <div id="sidebar-right">
-    <h2>
-      Filtres Droite
-      <span>
-        <button class="toggle-btn" data-target="departementList">Département</button>
-        <button class="toggle-btn" data-target="texte2List">Texte2</button>
-      </span>
-    </h2>
-
     <div id="filter-departement">
       <label class="selectall-label"><input type="checkbox" id="departement-select-all" checked> Tout Départements</label>
       <div id="departementList"></div>
@@ -199,7 +180,10 @@
       const container = document.getElementById(containerId);
       container.innerHTML = '';
       const mapVals = distinctValues[filterName];
-      mapVals.forEach((cpSet, val) => {
+      // Trier les valeurs par ordre alphabétique
+      const sortedVals = Array.from(mapVals.keys()).sort((a,b) => a.localeCompare(b, undefined, {ignorePunctuation: true}));
+      sortedVals.forEach(val => {
+        const cpSet = mapVals.get(val);
         const label = document.createElement('label');
         label.title = `${cpSet.size} codes postaux`;
 
@@ -246,7 +230,6 @@
       if (!geoLayer) return;
       geoLayer.eachLayer(layer => {
         let cp = layer.feature.properties.code_postal || layer.feature.properties.codePostal || layer.feature.properties.code || "";
-
         let extras = extraProperties[cp] || {};
 
         let valAgence = getKeyIgnoreCase(extras, "Agence") || "";
@@ -256,7 +239,6 @@
         let valTexte2 = getKeyIgnoreCase(extras, "Texte2") || "";
 
         let show = true;
-
         show = show && filterState.agence.get(valAgence) !== false;
         show = show && filterState.region.get(valRegion) !== false;
         show = show && filterState.antenne.get(valAntenne) !== false;
@@ -330,23 +312,22 @@
       }
     }
 
-    // Ajout des listeners toggle sur boutons (pour filtre agences, régions, antennes)
+    // Ajout des listeners toggle sur boutons
     function setupToggleButtons() {
       const buttons = document.querySelectorAll('.toggle-btn');
       buttons.forEach(btn => {
         btn.addEventListener('click', () => toggleListVisibility(btn));
-        // Initialisation labels
         btn.setAttribute('data-label-show', btn.textContent);
         btn.setAttribute('data-label-hide', 'Masquer');
       });
     }
 
-    // Boutons Réseau (sidebar gauche) et Département (sidebar droite)
     document.getElementById('toggleLeftBtn').addEventListener('click', () => {
       const left = document.getElementById('sidebar-left');
       if (left.style.display === 'none') left.style.display = 'block';
       else left.style.display = 'none';
     });
+
     document.getElementById('toggleRightBtn').addEventListener('click', () => {
       const right = document.getElementById('sidebar-right');
       if (right.style.display === 'none') right.style.display = 'block';
@@ -402,12 +383,10 @@
             }
           }).addTo(map);
 
-          // Centrage sûr seulement si la couche GeoJSON est valide
           const bounds = geoLayer.getBounds();
           if (bounds.isValid()) {
             map.fitBounds(bounds);
           } else {
-            // Sinon centre par défaut sur la France
             map.setView([46.6, 2.4], 6);
           }
           filterGeoLayer();
