--- a/map1.html
+++ b/map1.html
@@ -16,7 +16,7 @@
     body {
       display: flex;
       height: 100vh;
-      user-select: none; /* désactive la sélection générale */
+      user-select: none;
     }
     #sidebar-left, #sidebar-right {
       background: #f7f7f7;
@@ -73,11 +73,13 @@
       background: #007bff;
       border: none;
       color: white;
-      padding: 2px 8px;
+      padding: 4px 10px;
       border-radius: 4px;
       cursor: pointer;
       user-select: none;
-      margin-left: 4px;
+      margin: 10px 0 6px 0;
+      width: 100%;
+      text-align: left;
     }
     #toggleLeftBtn, #toggleRightBtn {
       position: fixed;
@@ -99,6 +101,9 @@
     #toggleRightBtn {
       right: 10px;
     }
+    .hidden {
+      display: none;
+    }
   </style>
 </head>
 <body>
@@ -111,17 +116,20 @@
       <button id="convertBtn">Conversion JSON et Affichage</button>
     </div>
 
-    <div id="filter-agence">
+    <button class="toggle-btn" data-target="agenceList">Agence</button>
+    <div id="filter-agence" class="hidden">
       <label class="selectall-label"><input type="checkbox" id="agence-select-all" checked> Tout Agences</label>
       <div id="agenceList"></div>
     </div>
 
-    <div id="filter-region">
+    <button class="toggle-btn" data-target="regionList">Région</button>
+    <div id="filter-region" class="hidden">
       <label class="selectall-label"><input type="checkbox" id="region-select-all" checked> Tout Régions</label>
       <div id="regionList"></div>
     </div>
 
-    <div id="filter-antenne">
+    <button class="toggle-btn" data-target="antenneList">Antenne</button>
+    <div id="filter-antenne" class="hidden">
       <label class="selectall-label"><input type="checkbox" id="antenne-select-all" checked> Tout Antennes</label>
       <div id="antenneList"></div>
     </div>
@@ -130,12 +138,14 @@
   <div id="map"></div>
 
   <div id="sidebar-right">
-    <div id="filter-departement">
+    <button class="toggle-btn" data-target="departementList">Département</button>
+    <div id="filter-departement" class="hidden">
       <label class="selectall-label"><input type="checkbox" id="departement-select-all" checked> Tout Départements</label>
       <div id="departementList"></div>
     </div>
 
-    <div id="filter-texte2">
+    <button class="toggle-btn" data-target="texte2List">Texte2</button>
+    <div id="filter-texte2" class="hidden">
       <label class="selectall-label"><input type="checkbox" id="texte2-select-all" checked> Tout Texte2</label>
       <div id="texte2List"></div>
     </div>
@@ -180,7 +190,6 @@
       const container = document.getElementById(containerId);
       container.innerHTML = '';
       const mapVals = distinctValues[filterName];
-      // Trier les valeurs par ordre alphabétique
       const sortedVals = Array.from(mapVals.keys()).sort((a,b) => a.localeCompare(b, undefined, {ignorePunctuation: true}));
       sortedVals.forEach(val => {
         const cpSet = mapVals.get(val);
@@ -287,11 +296,9 @@
     }
 
     function buildFilterLists() {
-      buildFilterList('agence', 'agenceList');
-      buildFilterList('region', 'regionList');
-      buildFilterList('antenne', 'antenneList');
-      buildFilterList('departement', 'departementList');
-      buildFilterList('texte2', 'texte2List');
+      ['agence', 'region', 'antenne', 'departement', 'texte2'].forEach(filter => {
+        buildFilterList(filter, filter + 'List');
+      });
 
       ['agence', 'region', 'antenne', 'departement', 'texte2'].forEach(filt => {
         updateSelectAllCheckbox(filt);
@@ -299,39 +306,29 @@
       });
     }
 
-    function toggleListVisibility(button) {
-      const target = button.getAttribute('data-target');
-      const el = document.getElementById(target);
-      if (!el) return;
-      if (el.style.display === 'none' || el.style.display === '') {
-        el.style.display = 'block';
-        button.textContent = button.getAttribute('data-label-hide');
-      } else {
-        el.style.display = 'none';
-        button.textContent = button.getAttribute('data-label-show');
-      }
-    }
-
-    // Ajout des listeners toggle sur boutons
-    function setupToggleButtons() {
-      const buttons = document.querySelectorAll('.toggle-btn');
-      buttons.forEach(btn => {
-        btn.addEventListener('click', () => toggleListVisibility(btn));
-        btn.setAttribute('data-label-show', btn.textContent);
-        btn.setAttribute('data-label-hide', 'Masquer');
+    document.querySelectorAll('.toggle-btn').forEach(btn => {
+      btn.addEventListener('click', () => {
+        const targetId = btn.getAttribute('data-target');
+        const el = document.getElementById('filter-' + targetId);
+        if (!el) return;
+        if (el.classList.contains('hidden')) {
+          el.classList.remove('hidden');
+          btn.textContent = 'Masquer ' + targetId.charAt(0).toUpperCase() + targetId.slice(1);
+        } else {
+          el.classList.add('hidden');
+          btn.textContent = targetId.charAt(0).toUpperCase() + targetId.slice(1);
+        }
       });
-    }
+    });
 
     document.getElementById('toggleLeftBtn').addEventListener('click', () => {
       const left = document.getElementById('sidebar-left');
-      if (left.style.display === 'none') left.style.display = 'block';
-      else left.style.display = 'none';
+      left.style.display = left.style.display === 'none' ? 'block' : 'none';
     });
 
     document.getElementById('toggleRightBtn').addEventListener('click', () => {
       const right = document.getElementById('sidebar-right');
-      if (right.style.display === 'none') right.style.display = 'block';
-      else right.style.display = 'none';
+      right.style.display = right.style.display === 'none' ? 'block' : 'none';
     });
 
     function updateMapWithExtraProperties() {
@@ -344,7 +341,7 @@
           if (geoLayer) map.removeLayer(geoLayer);
 
           geoLayer = L.geoJSON(data, {
-            style: function(feature) {
+            style: feature => {
               let cp = feature.properties.code_postal || feature.properties.codePostal || feature.properties.code || "";
               let extras = extraProperties[cp] || {};
               return {
@@ -355,7 +352,7 @@
                 fillOpacity: 0.7
               };
             },
-            onEachFeature: function(feature, layer) {
+            onEachFeature: (feature, layer) => {
               let cp = feature.properties.code_postal || feature.properties.codePostal || feature.properties.code || "";
               let extras = extraProperties[cp] || {};
 
@@ -375,14 +372,13 @@
 
               let clicUrl = getKeyIgnoreCase(extras, "Clic URL");
               if (clicUrl && clicUrl.trim().length > 0) {
-                layer.on("click", function() {
-                  window.open(clicUrl, '_blank');
-                });
+                layer.on("click", () => window.open(clicUrl, '_blank'));
                 layer.setStyle({ cursor: "pointer" });
               }
             }
           }).addTo(map);
 
+          // Centre sur France ou étend la vue selon données
           const bounds = geoLayer.getBounds();
           if (bounds.isValid()) {
             map.fitBounds(bounds);
@@ -398,37 +394,35 @@
         });
     }
 
-    document.getElementById('convertBtn').onclick = function() {
-      let fileInput = document.getElementById('uploadExcel');
-      let file = fileInput.files[0];
+    document.getElementById('convertBtn').onclick = () => {
+      const fileInput = document.getElementById('uploadExcel');
+      const file = fileInput.files[0];
       if (!file) {
         alert("Sélectionnez un fichier Excel (.xlsx) à convertir avant de cliquer.");
         return;
       }
-      var reader = new FileReader();
-      reader.onload = function(e) {
-        var data = new Uint8Array(e.target.result);
-        var workbook = XLSX.read(data, {type: 'array'});
-        var firstSheetName = workbook.SheetNames[0];
-        var sheet = workbook.Sheets[firstSheetName];
-        var jsonData = XLSX.utils.sheet_to_json(sheet);
+      const reader = new FileReader();
+      reader.onload = e => {
+        const data = new Uint8Array(e.target.result);
+        const workbook = XLSX.read(data, {type: 'array'});
+        const firstSheetName = workbook.SheetNames[0];
+        const sheet = workbook.Sheets[firstSheetName];
+        const jsonData = XLSX.utils.sheet_to_json(sheet);
 
         extraProperties = {};
         updateDistinctValues(jsonData);
 
-        jsonData.forEach(function(item) {
-          let cp = (item["Code Postal"] || "").toString();
+        jsonData.forEach(item => {
+          const cp = (item["Code Postal"] || "").toString();
           if (cp.length > 0) extraProperties[cp] = item;
         });
 
         buildFilterLists();
-        setupToggleButtons();
         updateMapWithExtraProperties();
         alert("Conversion et affichage réalisés !");
       };
       reader.readAsArrayBuffer(file);
     };
   </script>
-
 </body>
 </html>
